...
                    // Add space under the yellow rectangle
                    Spacer().frame(height: 500)

                    // Buttons
                    VStack(spacing: 15) {
                        NavigationLink(destination: GoalSettingView()) {
                            Text("Create New Goal")
                                .font(.headline)
                                .padding()
                                .frame(maxWidth: 250)
                                .background(Color.pink)
                                .foregroundColor(.white)
                                .cornerRadius(12)
...
